Update index.html -- re-linked hero img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <p>Welcome! Are you ready to speak English more confidently and unlock new opportunities? As an experienced, CELTA-certified tutor, I offer personalized 1:1 online lessons designed to make learning enjoyable and effective, drawing on my understanding as a speaker of Turkish, Spanish, and Farsi. Together, we'll build your skills at your pace in a supportive environment. Let's embark on this rewarding journey and watch your fluency soar!</p>
          </div>
          <div class="hero-img">
-         <img src="resources/images/matthew.jpg" alt="winter picture" class="hero-img">
+         <img src="https://github.com/mikep139/client-allegro-english/blob/main/matthew.jpg" alt="winter picture" class="hero-img">
         </div>
         </div>
         <div id="testimonials">
