Update index.html -- re-linked contact img

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <button class="contact-btn" onclick="window.location.href='mailto:thifaultlife@protonmail.com'">Email Me!</button>
             </div>
             <div>
-                <img src="resources/images/matthewcfa.JPG" alt="matthew gazing at sandwich">
+                <img src="matthewcfa.JPG" alt="matthew gazing at sandwich">
             </div>
         </div>
     </section>    
